# qwenscope

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  experiment.yaml  model.yaml  sae_training.yaml
scripts/: 01_setup_model.py  02_extract_activations.py  03_train_saes.py  04_evaluate_sae_quality.py  05_build_contrastive_data.py  06_identify_features.py  07_probe_residstream_steer.py  07_run_steering.py  08_evaluate_behavior.py  08_score_trajectories.py  09_analyze_results.py  09_cross_trait_specificity.py  10_feature_attribution.py  10_package_release.py  11_risk_cal_dissociation.py  12_package_release.py  clean_synthetic_data.py  generate_synthetic_data.py  run_pilot.py  run_pilot_a3b.py  runpod_setup.sh  sync_to_pod.sh
src/: __init__.py
src/analysis/: __init__.py  architecture_comparison.py  cost_tracking.py  domain_stability.py  effect_sizes.py  plots.py  routing_analysis.py  steering_matrix.py  trait_map.py
src/data/: __init__.py  contrastive.py  contrastive_templates.py  scenarios.py  sub_behavior_templates.py  synthetic_generator.py  tool_schemas.py  training_data.py
src/evaluation/: __init__.py  agent_harness.py  behavioral_metrics.py  contamination.py  llm_judge.py  safety.py
src/features/: __init__.py  architecture_analysis.py  attribution.py  clustering.py  extraction.py  interpretability.py  probe.py  scoring.py
src/model/: __init__.py  architecture.py  hooks.py  (+2 more)
tests/: test_agent_harness.py  test_data_pipeline.py  test_feature_extraction.py  test_hooks.py  test_integration.py  test_sae.py  test_scoring.py  test_steering.py
(+14 files in other folders)
